--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
--f https://download.pytorch.org/whl/torch_stable.html
 agate==1.6.3
 agate-dbf==0.2.2
 agate-excel==0.2.5
@@ -17,6 +16,8 @@ et-xmlfile==1.1.0
 Flask==2.1.2
 future==0.18.2
 greenlet==1.1.2
+gunicorn==20.1.0
+heroku==0.1.4
 idna==3.3
 importlib-metadata==4.12.0
 iniconfig==1.1.1
@@ -43,7 +44,7 @@ prettyTables==0.4
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.1.2
-python-dateutil==2.8.2
+python-dateutil==1.5
 python-slugify==6.1.1
 pytimeparse==1.1.8
 pytz==2021.3
