--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,8 @@ SQLAlchemy==1.4.31
 text-unidecode==1.3
 threadpoolctl==3.1.0
 tomli==2.0.1
+torch==1.10.2
+torchvision==0.11.3
 typing_extensions==4.1.1
 urllib3==1.26.9
 wcwidth==0.2.5
