--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,11 @@
--f https://download.pytorch.org/whl/torch_stable.html
-agate==1.6.3
-agate-dbf==0.2.2
-agate-excel==0.2.5
-agate-sql==0.5.8
-atomicwrites==1.4.0
-attrs==21.4.0
-Babel==2.9.1
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.1.3
-colorama==0.4.5
-csvkit==1.0.6
-cycler==0.11.0
-dbfread==2.0.7
-et-xmlfile==1.1.0
-Flask==2.1.2
-future==0.18.2
-greenlet==1.1.2
-gunicorn==20.1.0
-heroku==0.1.4
-idna==3.3
-importlib-metadata==4.12.0
-iniconfig==1.1.1
-ipynb-py-convert==0.4.6
-isodate==0.6.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.1.0
-kiwisolver==1.3.2
-leather==0.3.4
-MarkupSafe==2.1.1
-mrjob==0.7.4
-numpy==1.22.2
-olefile==0.46
-openpyxl==3.0.9
-p2j==1.3.2
-packaging==21.3
-pandas==1.4.3
-parsedatetime==2.4
-Pillow==9.0.1
-pluggy==1.0.0
-prettytable==3.1.1
-prettyTables==0.4
-py==1.11.0
-pyparsing==3.0.7
-pytest==7.1.2
-python-dateutil==1.5
-python-slugify==6.1.1
-pytimeparse==1.1.8
-pytz==2021.3
-PyYAML==6.0
-requests==2.27.1
-scikit-learn==1.1.0
-scipy==1.8.0
-six==1.16.0
-sklearn==0.0
-SQLAlchemy==1.4.31
-text-unidecode==1.3
-threadpoolctl==3.1.0
-tomli==2.0.1
-torch==1.10.2
-torchvision==0.11.3
-typing_extensions==4.1.1
-urllib3==1.26.9
-wcwidth==0.2.5
-Werkzeug==2.1.2
-xlrd==2.0.1
-zipp==3.8.0
+Flask==1.1.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
+numpy>=1.9.2
+scipy>=0.15.1
+scikit-learn>=0.18
+matplotlib>=1.4.3
+pandas>=0.19
