--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Flask==2.1.2
 future==0.18.2
 greenlet==1.1.2
 gunicorn==20.1.0
-heroku==0.1.4
+heroku
 idna==3.3
 importlib-metadata==4.12.0
 iniconfig==1.1.1
@@ -35,7 +35,7 @@ olefile==0.46
 openpyxl==3.0.9
 p2j==1.3.2
 packaging==21.3
-pandas==1.4.3
+pandas
 parsedatetime==2.4
 Pillow==9.0.1
 pluggy==1.0.0
